--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "node": ">=10"
   },
   "devDependencies": {
+    "@nomiclabs/hardhat-etherscan": "^3.1.7",
     "@types/chai": "^4.2.6",
     "@types/mocha": "^5.2.7",
     "chai": "^4.2.0",
