--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "license": "GPL-3.0-or-later",
   "dependencies": {
+    "@ethersproject/solidity": "^5.7.0",
     "hardhat": "^2.14.0",
     "hardhat-deploy": "^0.11.26",
     "hardhat-deploy-ethers": "^0.3.0-beta.13"
